--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,18 +5,28 @@
 
 trigger:
 - main
+ stages:
+  - stage: Build
+     jobs:
+        - job: Build
+      pool:
+        vmImage: 'ubuntu-latest'
 
-pool:
-  vmImage: 'ubuntu-latest'
+      steps:
+      - task: NodeTool@0
+        inputs:
+          versionSpec: '10.x'
+        displayName: 'Install Node.js'
 
-steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '10.x'
-  displayName: 'Install Node.js'
-
-- script: |
-    npm install
-    npm run build    
-    npm test
-       displayName: 'npm install, build, and test'
+      - script: |
+          npm install
+          npm run build    
+          npm test
+             displayName: 'npm install, build, and test'
+   - stage: Deploy
+      jobs:
+         - job: Deploy
+              pool:
+                     vmImage: 'vs2017-win2016'
+                          steps:
+                          
